[package]
name = "config-file"
version = "0.1.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
edition = "2018"

[features]
default = ["toml"]
json = ["serde_json"]
toml = ["toml-crate"]
yaml = ["serde_yaml"]

[dependencies]
serde = "^1.0"
thiserror = "^1.0"

[dependencies.serde_json]
version = "^1.0"
optional = true

[dependencies.serde_yaml]
version = "^0.8"
optional = true

[dependencies.toml-crate]
package = "toml"
version = "^0.5"
optional = true
