[package]
name = "config-file"
version = "0.2.2" # remember to update html_root_url
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
edition = "2018"
description = "Read and parse configuration file automatically"
repository = "https://github.com/Keruspe/config-file"
documentation = "https://docs.rs/config-file"
keywords = ["config", "configuration"]
categories = ["config"]
license = "BSD-2-Clause"

[lib]
name = "config_file"

[features]
default = ["toml"]
json = ["serde_json"]
toml = ["toml-crate"]
xml = ["serde-xml-rs"]
yaml = ["serde_yaml"]

[dependencies]
serde = "^1.0"
thiserror = "^1.0"

[dependencies.serde_json]
version = "^1.0"
optional = true

[dependencies.serde-xml-rs]
version = "^0.5"
optional = true

[dependencies.serde_yaml]
version = "^0.8"
optional = true

[dependencies.toml-crate]
package = "toml"
version = "^0.5"
optional = true

[dev-dependencies.serde]
version = "^1.0"
features = ["derive"]
